--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - spark-network
     environment:
-      - HF_TOKEN=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
+      - HF_TOKEN=
     command: >
       bash -c "apt update && apt install -y openjdk-11-jdk git cmake build-essential && tail -f /dev/null"
 
@@ -47,7 +47,7 @@ services:
       - SPARK_WORKER_CORES=1
       - SPARK_WORKER_MEMORY=5g
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - HF_TOKEN=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
+      - HF_TOKEN=
     ports:
       - "8081:8081"
     volumes:
@@ -66,7 +66,7 @@ services:
       - SPARK_WORKER_CORES=1
       - SPARK_WORKER_MEMORY=5g
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - HF_TOKEN=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
+      - HF_TOKEN=
     ports:
       - "8082:8082"
     volumes:
